// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductHeader /> should not render when the current product does not have children 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductHeader)>
    <ProductHeader
      dispatch={[Function]}
      isRendered={false}
    />
  </Connect(ProductHeader)>
</Provider>
`;

exports[`<ProductHeader /> should not render when the current product has children 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductHeader)>
    <ProductHeader
      dispatch={[Function]}
      isRendered={true}
    >
      <div
        className={
          Object {
            "data-css-i93p5x": "",
          }
        }
      >
        <Connect(Rating)>
          <Rating
            dispatch={[Function]}
            rating={null}
          />
        </Connect(Rating)>
      </div>
    </ProductHeader>
  </Connect(ProductHeader)>
</Provider>
`;
